--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body {
-  margin: 0;
-  padding: 0;
   font-size: 62.5%;
 }
 
 html body {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
