--- a/src/index.css
+++ b/src/index.css
@@ -8,22 +8,10 @@ html body {
   margin: 0;
   padding: 0;
 }
-
-@font-face {
-  font-family: "iconfont"; /* Project id 1912758 */
-  src: url("//at.alicdn.com/t/font_1912758_q1r8d9rv9t.woff2?t=1653921447923")
-      format("woff2"),
-    url("//at.alicdn.com/t/font_1912758_q1r8d9rv9t.woff?t=1653921447923")
-      format("woff"),
-    url("//at.alicdn.com/t/font_1912758_q1r8d9rv9t.ttf?t=1653921447923")
-      format("truetype");
-}
-
-.iconfont {
-  font-family: "iconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
 }
